# hfp_hf

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  bt_app_hf.c  bt_app_hf.h  bt_app_pbac.c  bt_app_pbac.h  bt_i2s.c  bt_i2s.h  codec.c  codec.h  idf_component.yml  main.c  phonebook.c  phonebook.h  ringtone.c  ringtone.h
